// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input allowClear classNames and styles should work 1`] = `
<div>
  <span
    class="rc-input-affix-wrapper custom-class"
    style="background-color: red;"
  >
    <span
      class="rc-input-prefix custom-prefix"
      style="color: blue;"
    >
      prefix
    </span>
    <input
      class="rc-input custom-input"
      style="color: red;"
      type="text"
      value="123"
    />
    <span
      class="rc-input-suffix custom-suffix"
      style="color: yellow;"
    >
      <span
        class="rc-input-show-count-suffix rc-input-show-count-has-suffix custom-count"
        style="color: green;"
      >
        3
      </span>
      suffix
    </span>
  </span>
  <span
    class="rc-input-group-wrapper custom-class"
    style="background-color: red;"
  >
    <span
      class="rc-input-wrapper rc-input-group"
    >
      <span
        class="rc-input-affix-wrapper"
      >
        <span
          class="rc-input-prefix custom-prefix"
          style="color: blue;"
        >
          prefix
        </span>
        <input
          class="rc-input custom-input"
          style="color: red;"
          type="text"
          value="123"
        />
        <span
          class="rc-input-suffix custom-suffix"
          style="color: yellow;"
        >
          <span
            class="rc-input-show-count-suffix rc-input-show-count-has-suffix custom-count"
            style="color: green;"
          >
            3
          </span>
          suffix
        </span>
      </span>
      <span
        class="rc-input-group-addon"
      >
        addon
      </span>
    </span>
  </span>
  <input
    class="rc-input custom-input custom-class"
    style="color: red; background-color: red;"
    type="text"
    value="123"
  />
  <span
    class="rc-input-group-wrapper custom-class"
    style="background-color: red;"
  >
    <span
      class="rc-input-wrapper rc-input-group"
    >
      <input
        class="rc-input custom-input"
        style="color: red;"
        type="text"
        value="123"
      />
      <span
        class="rc-input-group-addon"
      >
        addon
      </span>
    </span>
  </span>
</div>
`;

exports[`Input allowClear should change type when click 1`] = `
<div>
  <span
    class="rc-input-affix-wrapper"
  >
    <input
      class="rc-input"
      type="text"
      value="111"
    />
    <span
      class="rc-input-suffix"
    >
      <span
        class="rc-input-clear-icon"
        role="button"
        tabindex="-1"
      >
        ✖
      </span>
    </span>
  </span>
</div>
`;

exports[`Input allowClear should change type when click 2`] = `
<div>
  <span
    class="rc-input-affix-wrapper rc-input-affix-wrapper-focused"
  >
    <input
      class="rc-input"
      type="text"
      value=""
    />
    <span
      class="rc-input-suffix"
    >
      <span
        class="rc-input-clear-icon rc-input-clear-icon-hidden"
        role="button"
        tabindex="-1"
      >
        ✖
      </span>
    </span>
  </span>
</div>
`;

exports[`Input allowClear should not show icon if defaultValue is undefined or empty string 1`] = `
<div>
  <span
    class="rc-input-affix-wrapper"
  >
    <input
      class="rc-input"
      type="text"
      value=""
    />
    <span
      class="rc-input-suffix"
    >
      <span
        class="rc-input-clear-icon rc-input-clear-icon-hidden"
        role="button"
        tabindex="-1"
      >
        ✖
      </span>
    </span>
  </span>
</div>
`;

exports[`Input allowClear should not show icon if defaultValue is undefined or empty string 2`] = `
<div>
  <span
    class="rc-input-affix-wrapper"
  >
    <input
      class="rc-input"
      type="text"
      value=""
    />
    <span
      class="rc-input-suffix"
    >
      <span
        class="rc-input-clear-icon rc-input-clear-icon-hidden"
        role="button"
        tabindex="-1"
      >
        ✖
      </span>
    </span>
  </span>
</div>
`;

exports[`Input allowClear should not show icon if value is undefined or empty string 1`] = `
<div>
  <span
    class="rc-input-affix-wrapper"
  >
    <input
      class="rc-input"
      type="text"
      value=""
    />
    <span
      class="rc-input-suffix"
    >
      <span
        class="rc-input-clear-icon rc-input-clear-icon-hidden"
        role="button"
        tabindex="-1"
      >
        ✖
      </span>
    </span>
  </span>
</div>
`;

exports[`Input allowClear should not show icon if value is undefined or empty string 2`] = `
<div>
  <span
    class="rc-input-affix-wrapper"
  >
    <input
      class="rc-input"
      type="text"
      value=""
    />
    <span
      class="rc-input-suffix"
    >
      <span
        class="rc-input-clear-icon rc-input-clear-icon-hidden"
        role="button"
        tabindex="-1"
      >
        ✖
      </span>
    </span>
  </span>
</div>
`;

exports[`Input should support maxLength 1`] = `
<div>
  <input
    class="rc-input"
    maxlength="3"
    type="text"
    value=""
  />
</div>
`;
